# Background-Job-Processing-System

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
app/: main.py
app/database/: crud.py  db.py  models.py
app/schemas/: job.py
app/workers/: celery_app.py  tasks.py
database/: db.py
