[project]
name = "backgroundjobprocessingsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.1",
    "fastapi>=0.128.0",
    "redis>=7.1.0",
    "uvicorn[standard]>=0.40.0",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "alembic>=1.17.2",
]
